--- a/cv edwin.html
+++ b/cv edwin.html
@@ -14,7 +14,7 @@
                 
                         <table>
                             <tr><td><a href="mailto:">neo60x@hotmail.com</a></td></tr>
-                            <tr><td>24b Rue Ledru Rollin</td></tr>
+                            <tr><td>24b Rue ***** ******</td></tr>
                             <tr><td>21000 Dijon</td></tr> 
                             <tr><td>06********</td></tr>
                             <tr><td><a href="https://www.linkedin.com/in/edwin-dervaux/">Profil Linkedin</a></td></tr>
